templates/k3s-armvm/ingress-nginx.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-nginx-controller
  namespace: nginx
  annotations:
    metallb.universe.tf/allow-shared-ip: "shared-ingress"
spec:
  type: LoadBalancer
