templates/k3s-armvm/static-sites-prod.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: static-sites-prod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: static-sites-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d
            - name: static-content
              mountPath: /var/www/
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
        - name: static-content
          persistentVolumeClaim:
            claimName: nginx-static-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: static-sites-prod
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-jk
  namespace: static-sites-prod
  annotations:
    metallb.universe.tf/allow-shared-ip: "shared-ingress"
    cert-manager.io/cluster-issuer: "letsencrypt-dns"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - jacques.dog
        - www.jacques.dog
      secretName: static-sites-jk-tls
  rules:
    - host: jacques.dog
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
    - host: www.jacques.dog
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-cat
  namespace: static-sites-prod
  annotations:
    metallb.universe.tf/allow-shared-ip: "shared-ingress"
    cert-manager.io/cluster-issuer: "letsencrypt-dns"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - catsworks.com
        - www.catsworks.com
      secretName: static-sites-cat-tls
  rules:
    - host: catsworks.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
    - host: www.catsworks.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
